added booking (on progress)

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <title>My AngularJS App</title>
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
+  <link rel="stylesheet" href="css/bootstrap-glyphicons.css"/>
   
 </head>
 <body>
