--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
   <link rel="stylesheet" href="css/bootstrap-glyphicons.css"/>
-  
 </head>
 <body>
 <div id="page">
@@ -50,6 +49,8 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/jcarousel.min.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
+  <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script><link rel="stylesheet" href="css/bootstrap-glyphicons.css"/>
+  <script type='text/javascript' src='lib/firebase/angularFire.min.js'></script>
   <script type="text/javascript">
 	$(document).ready(function() {
 		$('.jcarousel').jcarousel({
