--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,12 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Hotel Booking</title>
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
   <link rel="stylesheet" href="css/bootstrap-glyphicons.css"/>
+  <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 <div id="page">
@@ -41,22 +42,16 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
+  <script src="lib/angular/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jcarousel.min.js"></script>
-  <script src="lib/angular/angular-resource.js"></script>
+  <script src="lib/jquery-1.8.2.min.js"></script>
+  <script src="lib/jquery.flexisel.js"></script>
+  <script src="lib/caroufredsel/jquery.carouFredSel-6.2.1.js"></script>
   <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script><link rel="stylesheet" href="css/bootstrap-glyphicons.css"/>
   <script type='text/javascript' src='lib/firebase/angularFire.min.js'></script>
-  <script type="text/javascript">
-	$(document).ready(function() {
-		$('.jcarousel').jcarousel({
-			scroll: 1, animation:700, visible:1, auto:5, wrap:"both"
-		});
-	});
-</script>
 </body>
 </html>
