--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
   <link rel="stylesheet" href="css/bootstrap-glyphicons.css"/>
   <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/datetimepicker.css"/>
 </head>
 <body>
 <div id="page">
@@ -50,6 +51,7 @@
   <script src="js/directives.js"></script>
   <script src="lib/jquery-1.8.2.min.js"></script>
   <script src="lib/jquery.flexisel.js"></script>
+  <script src="lib/datetimepicker.js"></script>
   <script src="lib/caroufredsel/jquery.carouFredSel-6.2.1.js"></script>
   <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script><link rel="stylesheet" href="css/bootstrap-glyphicons.css"/>
   <script type='text/javascript' src='lib/firebase/angularFire.min.js'></script>
