--- a/app/index.html
+++ b/app/index.html
@@ -23,14 +23,13 @@
             </div>
 		  <div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li ng-class="{ active: isActive('/home')}"><a href="#/home">Home</a></li>
+				<li ng-class="{ active: isActive('/home')}"><a href="#/home"><i class="glyphicon glyphicon-star"></i> Home</a></li>
 				<li ng-class="{ active: isActive('/room-list')}"><a href="#/room-list">Room List</a></li>
 			</ul>
 		  </div>
     </nav>
 	<div id="wrapper">	
 		<div class="header">
-			<h1>Demo Hotel</h1>
 		</div>
 			
 		<div class="content">
