--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,8 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
+  <script src="lib/angular-ui/ui-bootstrap-0.6.0.js"></script>
+
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
@@ -50,9 +52,10 @@
   <script src="js/directives.js"></script>
   <script src="lib/jquery-1.8.2.min.js"></script>
   <script src="lib/jquery.flexisel.js"></script>
+
   <script src="lib/datetimepicker.js"></script>
   <script src="lib/caroufredsel/jquery.carouFredSel-6.2.1.js"></script>
-  <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script><link rel="stylesheet" href="css/bootstrap-glyphicons.css"/>
+  <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
   <script type='text/javascript' src='lib/firebase/angularFire.min.js'></script>
 </body>
 </html>
