--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
   <script src="js/directives.js"></script>
   <script src="lib/jquery-1.8.2.min.js"></script>
   <script src="lib/jquery.flexisel.js"></script>
-
+  <script src="lib/bootstrap.min.js"></script>
   <script src="lib/datetimepicker.js"></script>
   <script src="lib/caroufredsel/jquery.carouFredSel-6.2.1.js"></script>
   <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
