added room-list page

--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,7 @@
 		  </div>
     </nav>
 	<div id="wrapper">	
-		
-		  <div ng-view></div>
+		<div ng-view></div>
 	</div>
 </div>
   <!-- In production use:
@@ -51,6 +50,7 @@
 
   <script src="lib/datetimepicker.js"></script>
   <script src="lib/caroufredsel/jquery.carouFredSel-6.2.1.js"></script>
+  <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
   <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
   <script type='text/javascript' src='lib/firebase/angularFire.min.js'></script>
 </body>
