--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/angular-ui/ui-bootstrap-0.6.0.js"></script>
+  <script src="lib/angular-ui/ui-bootstrap-0.6.0.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
