--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,8 @@
   <script src="lib/jquery.flexisel.js"></script>
   <script src="lib/bootstrap.min.js"></script>
   <script src="lib/datetimepicker.js"></script>
-  <script src="lib/caroufredsel/jquery.carouFredSel-6.2.1.js"></script>
+
+  <script src="lib/flowslider.jquery.js"></script>
   <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
   <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
   <script type='text/javascript' src='lib/firebase/angularFire.min.js'></script>
